<resources>

    <!--程序与主界面-->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">开始</string>
    <string name="fii">智能工业互联</string>
    <string name="home">首页</string>
    <string name="shot">实时快照</string>
    <string name="voice">语音</string>
    <string name="device_data">设备数据</string>
    <string name="me">我的</string>
    <string name="app_name">Robolink</string>
    <string name="hack">骇入！</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <!--欢迎界面-->
    <string name="login">登录</string>
    <string name="register">注册</string>
    <!-- 注册界面-->
    <string name="nickname">昵称</string>
    <string name="email">邮箱</string>
    <string name="enter_authentication_code">输入验证码</string>
    <string name="get_authentication_code">获取验证码</string>
    <string name="password_combination">密码（6-12位数字字母组合）</string>
    <!--登录界面-->
    <string name="enter_account">请输入账号</string>
    <string name="enter_psw">请输入密码</string>
    <string name="remember_psw">记住密码</string>
    <string name="auto_login">自动登录</string>
    <string name="register_new_account">注册新账号</string>
    <!--首页-->
    <string name="Time_Efficiency_Analysis">时间效率分析</string>
    <string name="Equippment_Working_percentage">设备工作占比时间分析</string>
    <string name="OEE_Efficiency_Analysis">OEE效率分析</string>
    <string name="availability">可用性</string>
    <string name="performance">表现性</string>
    <string name="quality_index">质量指数</string>
    <string name="Manufacture_per_Hour">每小时加工件数</string>
    <string name="Online_Analysis">开机统计</string>
    <string name="Work">工作</string>
    <string name="Sleep">待机</string>
    <string name="Online">开机</string>
    <string name="OffLine">离线</string>
    <string name="Warning">报警</string>
    <string name="Break">断开</string>
    <string name="Electricity_on">通电</string>
    <string name="Running">运行</string>
    <!--快照界面-->
    <string name="isolated_mode">孤岛模式</string>
    <string name="tour_mode">参观模式</string>
    <string name="order_mode">顺序模式</string>
    <string name="distributed_mode">分布模式</string>
    <string name="patrol_mode">巡逻模式</string>
    <!--设备界面-->
    <string name="phone_mid_frame">手机中框</string>
    <string name="knife_manufacture">刀具加工线</string>
    <string name="CNC1_5_Axis">CNC1哈工大五轴</string>
    <string name="CNC2_FOXNUM">CNC2FOXNUM三轴</string>
    <string name="CNC2_FANUC">CNC2FANUC三轴</string>
    <string name="FOX_BOT_1">FOXBOT1</string>
    <string name="FOX_BOT_2">FOXBOT2</string>
    <string name="FOX_BOT_3">FOXBOT3</string>
    <string name="Googoltech_1">固高1</string>
    <string name="Googoltech_2">固高2</string>
    <string name="Googoltech_3">固高3</string>
    <string name="Feeder">送料机</string>
    <string name="ATM">ATM</string>
    <string name="AGV1">AGV</string>
    <string name="AGV2">AGV2</string>
    <!-- 控制界面-->
    <string name="surveillance">视频监控</string>
    <!--设定界面-->
    <string name="check_for_updates">检查更新</string>
    <string name="profile_photo">头像</string>
    <string name="chatrobot">聊天机器人</string>
    <string name="personal_info">个人信息</string>
    <string name="collection">收藏</string>
    <string name="about">关于</string>
    <string name="about_us">关于我们</string>
    <string name="setting">设置</string>
    <string name="customer_service">客服</string>
    <string name="help">帮助</string>
    <string name="logout">退出登录</string>
    <string name="clean_cache">清空缓存</string>
    <string name="cache_size">缓存大小</string>
    <!--语音界面-->
    <string name="language">语言</string>
    <string name="chinese_simplified">简体中文</string>
    <string name="chinese_traditional">繁体中文</string>
    <string name="english">English</string>

</resources>