<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:orderInCategory="0"
        android:icon="@mipmap/ic_home_none"
        android:title="@string/home"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/navigation_camera"
        android:icon="@mipmap/ic_screenshot_none"
        android:orderInCategory="1"
        android:title="@string/shot" />
    <item
        android:id="@+id/navigation_audiocontrol"
        android:icon="@mipmap/ic_voice_none"
        android:orderInCategory="2"
        android:title="@string/voice" />
    <item
        android:id="@+id/navigation_devices"
        android:icon="@mipmap/ic_device_data_none"
        android:orderInCategory="3"
        android:title="@string/device_data" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@mipmap/ic_me_none"
        android:orderInCategory="4"
        android:title="@string/me" />

</menu>
