<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityProfile">

    <com.example.robolink.CustomTitleBar
        android:id="@+id/titlebar_profile"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:centerTextColor="#000"
        app:centerTitle="@string/personal_info"
        app:centerTitleSize="18"
        app:leftDrawable="@drawable/ic_out_black"
        app:leftText="@string/me"
        app:leftTextColor="#000"
        app:leftTextSize="15"></com.example.robolink.CustomTitleBar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C7C7C7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical">

        <com.example.robolink.CustomTitleBar
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin = "10dp"
            app:leftText="@string/profile_photo"
            app:leftTextColor="#000"
            app:rightDrawable="@drawable/ic_me"></com.example.robolink.CustomTitleBar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:background="#C5C5C5"/>

        <com.example.robolink.CustomTitleBar
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin = "10dp"
            app:leftText="@string/nickname"
            app:leftTextColor="#000"
            app:rightText= "null" ></com.example.robolink.CustomTitleBar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:background="#C5C5C5"/>

        <com.example.robolink.CustomTitleBar
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin = "10dp"
            app:leftText="@string/email"
            app:leftTextColor="#000"
            app:rightText="null"></com.example.robolink.CustomTitleBar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="60dp"
            android:background="#C5C5C5"/>
    </LinearLayout>

</LinearLayout>