<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SupportFunctions.ActivityLanguage">


    <com.fii.robolink.CustomView.CustomTitleBar
        android:id="@+id/titlebar_language"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:centerTextColor="#000"
        app:centerTitle="@string/language"
        app:centerTitleSize="18"
        app:leftDrawable="@drawable/ic_out_black"
        app:leftText="@string/me"
        app:leftTextColor="#000"
        app:leftTextSize="15"></com.fii.robolink.CustomView.CustomTitleBar>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C7C7C7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="11"
        android:orientation="vertical">

        <com.fii.robolink.CustomView.CustomTitleBar
            android:id="@+id/chinese_simplified"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            app:leftText="@string/chinese_simplified"
            app:leftTextColor="#000"></com.fii.robolink.CustomView.CustomTitleBar>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:background="#C5C5C5"/>

        <com.fii.robolink.CustomView.CustomTitleBar
            android:id="@+id/chinese_traditional"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            app:leftText="@string/chinese_traditional"
            app:leftTextColor="#000"></com.fii.robolink.CustomView.CustomTitleBar>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:background="#C5C5C5"/>

        <com.fii.robolink.CustomView.CustomTitleBar
            android:id="@+id/english"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            app:leftText="@string/english"
            app:leftTextColor="#000"></com.fii.robolink.CustomView.CustomTitleBar>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="40dp"
            android:background="#C5C5C5"/>
    </LinearLayout>
</LinearLayout>